--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.39.3",
     "react-intersection-observer": "^9.4.0",
+    "react-leaflet": "^4.1.0",
+    "react-leaflet-universal": "^2.2.1",
     "sass": "^1.49.9",
+    "sweetalert2": "^11.6.8",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
